--- a/Lifegiver_test/lifegiver/templates/login_user_type.html
+++ b/Lifegiver_test/lifegiver/templates/login_user_type.html
@@ -1,10 +1,23 @@
-{% extends 'layout.html' %}
-
+{% extends "layout.html" %}
+{% block link %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login_user_type.css') }}" />
+{% endblock link %}
 {% block content %}
-
-
-<a class="btn btn-secondary mr-2" href="{{ url_for('existing_donor') }}">Donor</a>
-<a class="btn btn-success" href="{{ url_for('hospital_login') }}">Hospital</a>
-
-
-{% endblock content%}
+   <div class="landing">
+      <div class="card">
+         <div class="imgBx">
+             <img src="../static/images/nguy-n-hi-p-maYeMl3xCrY-unsplash.jpg" alt="Login">
+         </div>
+         <div class="infrBx">
+             <div class="input_feild">
+                 <label for="Hospital Login">Hospital Login</label>
+                 <a href="{{ url_for('hospital_login') }}">Login</a>
+             </div>
+             <div class="input_feild">
+                 <label for="Donor Login">Donor Login</label>
+                 <a href="{{ url_for('existing_donor') }}">Login</a>
+             </div>
+         </div>
+     </div>
+   </div>
+{% endblock content %}
