--- a/Lifegiver_test/lifegiver/static/css/loading.css
+++ b/Lifegiver_test/lifegiver/static/css/loading.css
@@ -7,8 +7,18 @@
     padding: 0;
 }
 
-body {
-    background-color: #eee;
+.sec-loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+    transition: 50s opacity 0.75s, visibility 0.75s;
+    z-index: 10;
 }
 
 .sec-loading {
@@ -17,6 +27,11 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.sec-loading--hidden {
+    opacity: 0;
+    visibility: hidden;
 }
 
 .sec-loading .one {
