--- a/Lifegiver_test/lifegiver/templates/hospital_login.html
+++ b/Lifegiver_test/lifegiver/templates/hospital_login.html
@@ -1,54 +1,63 @@
 <!--Change the name later to hospital_login-->
 {% extends "layout.html" %}
+{% block link %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/hospital_login.css') }}" />
+{% endblock link %}
 {% block content %}
-    <div class="content-section">
-        <form method="POST" action="">
-            {{ form.hidden_tag() }}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Log In</legend>
-                <div class="form-group">
-                    {{ form.barcode.label(class="form-control-label") }}
-
-                    {% if form.barcode.errors %}
+<div class="landing">
+    <div class="card">
+        <div class="imgBx">
+            <img src="../static/images/hospital_login.png" alt="">
+        </div>
+        <div class="infrBx">
+            <form method="POST" action="">
+                {{ form.hidden_tag() }}
+                <fieldset class="form-group">
+                    <legend class="border-bottom mb-4">Log In</legend>
+                    <div class="form-group">
+                        {{ form.barcode.label(class="form-control-label") }}
+                        {% if form.barcode.errors %}
                         {{ form.barcode(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
                             {% for error in form.barcode.errors %}
-                                <span>{{ error }}</span>
+                            <span>{{ error }}</span>
                             {% endfor %}
                         </div>
-                    {% else %}
+                        {% else %}
                         {{ form.barcode(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {{ form.password.label(class="form-control-label") }}
-                    {% if form.password.errors %}
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.password.label(class="form-control-label") }}
+                        {% if form.password.errors %}
                         {{ form.password(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
                             {% for error in form.password.errors %}
-                                <span>{{ error }}</span>
+                            <span>{{ error }}</span>
                             {% endfor %}
                         </div>
-                    {% else %}
+                        {% else %}
                         {{ form.password(class="form-control form-control-lg") }}
-                    {% endif %}
+                        {% endif %}
+                    </div>
+                    <div class="form-check">
+                        {{ form.remember(class="form-check-input") }}
+                        {{ form.remember.label(class="form-check-label") }}
+                    </div>
+                </fieldset>
+                <div class="form-group">
+                    {{ form.submit(class="btn btn-outline-info") }}
                 </div>
-                <div class="form-check">
-                    {{ form.remember(class="form-check-input") }}
-                    {{ form.remember.label(class="form-check-label") }}
+                <small class="text-muted ml-2">
+                    <a href="{{ url_for('reset_request') }}">Forgot Password?</a>
+                </small>
+                <div class="border-top pt-3">
+                    <small class="text-muted">
+                        Need An Account? <a class="ml-2" href="{{ url_for('hospital_registration') }}">Sign Up Now</a>
+                    </small>
                 </div>
-            </fieldset>
-            <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
-            </div>
-            <small class="text-muted ml-2">
-                <a href="{{ url_for('reset_request') }}">Forgot Password?</a>
-            </small>
-        </form>
+            </form>
+        </div>
     </div>
-    <div class="border-top pt-3">
-        <small class="text-muted">
-            Need A Barcode? <a class="ml-2" href="{{ url_for('hospital_registration') }}">Contact admin</a>
-        </small>
-    </div>
+</div>
 {% endblock content %}
