--- a/Lifegiver_test/lifegiver/templates/layout.html
+++ b/Lifegiver_test/lifegiver/templates/layout.html
@@ -45,7 +45,7 @@
                 <a class="nav-link" href="{{ url_for('about') }}">About</a>
               </li>
               <li class="nav-item">
-                <a class="btn" href="{{ url_for('hospital_login') }}">log out</a>
+                <a id="logout" class="btn" href="{{ url_for('logout') }}">log out</a>
               </li>
             </ul>
           </div>
