--- a/Lifegiver_test/lifegiver/templates/layout.html
+++ b/Lifegiver_test/lifegiver/templates/layout.html
@@ -36,10 +36,13 @@
                 <a class="nav-link" href="{{ url_for('home') }}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('about') }}">Dashboard</a>
+                <a class="nav-link" href="{{ url_for('donor_dashboard') }}">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('about') }}">Urgent Request</a>
+                <a class="nav-link" href="{{ url_for('urgent_requests') }}">Urgent Request</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('don_requests') }}">Requests</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('about') }}">About</a>
@@ -56,13 +59,13 @@
                 <a class="nav-link" href="{{ url_for('home') }}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('about') }}">Dashboard</a>
+                <a class="nav-link" href="{{ url_for('hospital_dashboard') }}">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('about') }}">Urgent Request</a>
+                <a class="nav-link" href="{{ url_for('new_urgent_request') }}">Urgent Request</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('about') }}">Requests</a>
+                <a class="nav-link" href="{{ url_for('new_request') }}">Requests</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('about') }}">About</a>
