--- a/Lifegiver_test/lifegiver/static/css/dashborad_don.css
+++ b/Lifegiver_test/lifegiver/static/css/dashborad_don.css
@@ -1,1 +1,249 @@
+:root {
+    --blue-color: #0075ff;
+    --blue-alt-color: #0d69d5;
+    --orange-color: #f59e0b;
+    --green-color: #22c55e;
+    --red-color: #f44336;
+    --grey-color: #888;
+}
 
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "Open Sans", sans-serif;
+    margin: 0;
+}
+
+*:focus {
+    outline: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+
+.page {
+    background-color: #f1f5f9;
+    min-height: 100vh;
+}
+
+/* Start Sidebar */
+.sidebar {
+    width: 250px;
+    box-shadow: 0 0 10px #ddd;
+}
+
+.sidebar ul li a {
+    transition: 0.03s;
+    margin-bottom: 5px;
+    border-radius: 20px;
+    text-decoration: none;
+    font-size: 40px !important;
+}
+
+.sidebar ul li a:hover,
+.sidebar ul li a.active {
+    width: 302px;
+    background-color: #f6f6f6;
+    color: black;
+}
+
+.sidebar ul li a span {
+    font-size: 14px;
+    margin-left: 10px;
+}
+
+@media (max-width: 767px) {
+    .sidebar {
+        width: 58px;
+        padding: 10px;
+    }
+
+    .sidebar>h3 {
+        font-size: 13px;
+        margin-bottom: 15px;
+    }
+
+    .sidebar>h3::before,
+    .sidebar>h3::after {
+        display: none;
+    }
+
+    .sidebar ul li a span {
+        display: none;
+    }
+}
+
+/* End Sidebar */
+/* Start Content */
+.content {
+    overflow: hidden;
+}
+
+.head .icons img {
+    width: 32px;
+    height: 32px;
+    margin-left: 15px;
+}
+
+.head .icons svg {
+    width: 22px;
+    height: 22px;
+    margin-left: 15px;
+    margin-top: 10px;
+}
+
+.head .icons .notification::before {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: var(--red-color);
+    border-radius: 50%;
+    right: -2px;
+    top: 10px;
+}
+
+.page h1 {
+    margin: 20px 20px 40px;
+}
+
+
+.wrapper {
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+@media (max-width: 767px) {
+    .wrapper {
+        grid-template-columns: minmax(200px, 1fr);
+        margin-left: 10px;
+        margin-right: 10px;
+        gap: 10px;
+    }
+}
+
+/* End Content */
+/* Start Welcome Widget */
+.welcome {
+    overflow: hidden;
+}
+
+.welcome .intro img {
+    width: 200px;
+    margin-bottom: -10px;
+}
+
+.welcome .avatar {
+    width: 64px;
+    height: 64px;
+    border: 2px solid white;
+    border-radius: 50%;
+    padding: 2px;
+    box-shadow: 0 0 5px #ddd;
+    margin-left: 20px;
+    margin-top: -32px;
+}
+
+.welcome .body {
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+}
+
+.welcome .body>div {
+    flex: 1;
+}
+
+.welcome .visit {
+    margin: 0 15px 15px auto;
+    transition: 0.3s;
+}
+
+.welcome .visit:hover {
+    color: #fff;
+}
+
+@media (max-width: 767px) {
+    .welcome .intro {
+        padding-bottom: 30px;
+    }
+
+    .welcome .avatar {
+        margin-left: 0;
+    }
+
+    .welcome .body>div:not(:last-child) {
+        margin-bottom: 20px;
+    }
+}
+
+body {
+    background-image: linear-gradient(to right, #8a1515, #9d3b3b);
+}
+
+.sidebar,
+.page {
+    background: transparent !important;
+}
+
+.content {
+    background-color: #fff;
+    border-radius: 30px;
+}
+
+.sidebar {
+    border-radius: 30px;
+    width: 300px;
+}
+
+.sidebar ul {
+    margin-top: 80px;
+}
+
+.visit {
+    margin-left: 10px;
+    justify-content: center;
+    padding-left: 22px;
+    padding-right: 22px;
+    color: rgba(255, 255, 255, 0.797);
+    border: 3px solid white;
+    background-color: #8c1818;
+    border-radius: 100px;
+    font-size: large;
+    text-decoration: none;
+}
+
+.body div a {
+    color: black;
+    text-decoration: none;
+}
+
+.sidebar ul li a svg {
+    width: 20px;
+    height: 20px;
+}
+
+.content h1 {
+    color: #8c1818;
+    font-family: "Acme", sans-serif;
+}
+
+.welcome {
+    border: 3px solid #8c1818;
+    min-width: 1000px !important;
+    margin-left: 20px;
+}
+
+#pic {
+    padding-left: 20px;
+}
