--- a/Lifegiver_test/lifegiver/templates/donor_dashboard.html
+++ b/Lifegiver_test/lifegiver/templates/donor_dashboard.html
@@ -16,7 +16,7 @@
                 </a>
             </li>
             <li>
-                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="settings.html">
+                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('donor_profile') }}">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
                     <span>Profile</span>
                 </a>
@@ -63,7 +63,7 @@
                     <div>Your Donation Count is <span class="d-block c-grey fs-14 mt-10"><a class="mr-2" href="{{ url_for('donation_history', donor_id=current_user.id) }}">{{ current_user.donation_count }}</span></div>
                     <div>View Nearby Hospitals <span class="d-block c-grey fs-14 mt-10"><a class="mr-2" href="{{ url_for('nearby_hospitals', donor_id=current_user.id) }}">Click Here</a></span></div>
                 </div>
-                <a href="profile.html" class="visit d-block fs-14 bg-blue c-white w-fit btn-shape">Profile</a>
+                <a href="{{ url_for('donor_profile') }}" class="visit d-block fs-14 bg-blue c-white w-fit btn-shape">Profile</a>
             </div>
         </div>
     </div>
