--- a/Lifegiver_test/lifegiver/templates/about.html
+++ b/Lifegiver_test/lifegiver/templates/about.html
@@ -16,7 +16,7 @@
                 </p>
             </div>
             <div class="icons">
-                <p>Content US</p>
+                <p>Contact US</p>
                 <svg xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                     <path
